--- a/test/fonts-and-alignment.sass
+++ b/test/fonts-and-alignment.sass
@@ -30,8 +30,14 @@ span
   &.slanted,
   &.monospace,
   &.serif,
-  &.sans
-    color: blue
+  &.sans,
+  &.smallcaps
+    color: green
+
+.title,
+.author,
+.date
+  text-align: center
 
 /* Specific styles for classes defined by the Lua filter */
 
