--- a/test/fonts-and-alignment.sass
+++ b/test/fonts-and-alignment.sass
@@ -32,7 +32,7 @@ span
   &.serif,
   &.sans,
   &.smallcaps
-    color: green
+    color: maroon
 
 .title,
 .author,
@@ -69,13 +69,13 @@ span
   font-size: x-small
 
 .small
-  font-size: smaller
+  font-size: small
 
 .normal
   font-size: 1rem
 
 .large
-  font-size: larger
+  font-size: large
 
 .xlarge
   font-size: x-large
