Removed slanted style from filter and cleaned up code

--- a/test/fonts-and-alignment.css
+++ b/test/fonts-and-alignment.css
@@ -1,5 +1,5 @@
 /* Noto Sans, Noto Serif and Fira Mono fonts from Google Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Mono&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 /* Generic styles */
 body {
   margin-left: auto;
@@ -29,6 +29,14 @@ span.xxsmall, span.xsmall, span.small, span.normal, span.large, span.xlarge, spa
 }
 
 /* Specific styles for classes defined by the Lua filter */
+.bold {
+  font-weight: 700;
+}
+
+.italic {
+  font-style: italic;
+}
+
 .monospace {
   font-family: "Fira Mono", monospace;
 }
@@ -39,18 +47,6 @@ span.xxsmall, span.xsmall, span.small, span.normal, span.large, span.xlarge, spa
 
 .serif {
   font-family: "Noto Serif", serif;
-}
-
-.italic {
-  font-style: italic;
-}
-
-.slanted {
-  font-style: oblique;
-}
-
-.bold {
-  font-weight: 700;
 }
 
 .smallcaps {
