--- a/test/fonts-and-alignment.sass
+++ b/test/fonts-and-alignment.sass
@@ -1,5 +1,5 @@
-/* Noto Sans, Noto Serif and Fira Mono fonts from Google Fonts
-@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap')
+/* Noto Sans, Noto Serif and Fira Mono fonts from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap')
 
 /* Generic styles */
 body
@@ -40,6 +40,11 @@ span
   text-align: center
 
 /* Specific styles for classes defined by the Lua filter */
+.bold
+  font-weight: 700
+
+.italic
+  font-style: italic
 
 .monospace
   font-family: "Fira Mono", monospace
@@ -49,15 +54,6 @@ span
 
 .serif
   font-family: "Noto Serif", serif
-
-.italic
-  font-style: italic
-
-.slanted
-  font-style: oblique
-
-.bold
-  font-weight: 700
 
 .smallcaps
   font-variant: small-caps
