--- a/specimens/specimen.sass
+++ b/specimens/specimen.sass
@@ -21,13 +21,17 @@ h6
 span
   &.bold,
   &.italic,
+  &.medium,
   &.monospace,
+  &.normalfont,
   &.serif,
   &.sans,
   &.smallcaps,
   &.bf,
   &.it,
+  &.md,
   &.tt,
+  &.nf,
   &.rm,
   &.sf,
   &.sc,
@@ -56,6 +60,15 @@ span
 .italic,
 .it
   font-style: italic
+
+.medium,
+.md
+  font-weight: 400
+
+.normalfont,
+.nf
+  font-family: "Noto Serif", serif
+  font-style: normal
 
 .monospace,
 .tt
