--- a/specimens/specimen.sass
+++ b/specimens/specimen.sass
@@ -2,10 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap')
 
 // Variables that correspond to the LaTeX font values set in the YAML block
-$fontsize: "16px"
+$fontsize: 16px
 $mainfont: "Noto Serif", serif
 $sansfont: "Noto Sans", sans-serif
 $monofont: "Fira Mono", monospace
+$linkcolor: blue
 $linestretch: 1.25
 
 // Calculate REM font sizes that correspond to LaTeX font sizes
@@ -73,6 +74,12 @@ span
 
 /* The styles below are for the classes defined in the fonts and alignment
   Lua filter. Modify them as required to style the HTML document. */
+a
+  color: $linkcolor
+  text-decoration: none
+
+a:hover
+  text-decoration: underline
 
 /* Font styles
 .bold,
