--- a/specimens/specimen.sass
+++ b/specimens/specimen.sass
@@ -82,7 +82,7 @@ a:hover
 /* The styles below are for the classes defined in the fonts and alignment
   Lua filter. Modify them as required to style the HTML document. */
 
-/* Font styles
+/* Font Styles */
 .bold,
 .bf
   font-weight: 700
@@ -128,7 +128,7 @@ a:hover
 .upper
   text-transform: uppercase
 
-/* Font sizes relative to a 16px/12pt document
+/* Font Sizes relative to a 16px/12pt document
 .tiny
   font-size: $tiny
 
@@ -156,7 +156,7 @@ a:hover
 .huge
   font-size: $huge
 
-/* Layouts */
+/* Text Alignments */
 div
   &.center,
   &.centering
