--- a/specimens/specimen.sass
+++ b/specimens/specimen.sass
@@ -1,5 +1,5 @@
 /* Noto Sans, Noto Serif and Fira Mono fonts from Google change as needed */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap')
+@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 // Variables that correspond to the LaTeX font values set in the YAML block
 $fontsize: 16px
